Fixed gap in holding blocks

--- a/about-us/about-us.css
+++ b/about-us/about-us.css
@@ -4,7 +4,6 @@
 
 .gallery {
     position: relative;
-    /* ⬅️  anchor absolutely-positioned children */
     height: calc(100vh - 80px);
     height: calc(100svh - 80px);
     width: 100%;
@@ -730,11 +729,12 @@
         }
 
         .holding-block-hidden {
-            height: 75%;
+            height: 100%;
             overflow: visible;
             opacity: 1;
             pointer-events: auto;
             transition: opacity 0.4s ease-in;
+            justify-content: space-between;
         }
     }
 
@@ -776,16 +776,28 @@
 
 @media (max-width: 1200px) {
     .holding-block.active .holding-block-hidden {
-        height: 60%;
+        height: 100%;
+        justify-content: space-between;
+    }
+
+    .holding-block.active {
+        .holding-block-description {
+            height: 50%;
+        }
     }
 }
 
+
+
 @media (max-width: 550px) {
-    .holding-block.active .holding-block-hidden {
-        height: 52%;
-        gap: 16px;
+    .holding-block.active {
+        .holding-block-description {
+            height: 43%;
+        }
     }
 }
+
+
 
 
 /* --- NAVIGATION BAR -------------------------------------------------- */
